--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">CatsDrawingOnCanvas</string>
+    <string name="qr_screen">QR</string>
+    <string name="kaleidoscope_screen">Kaleidoscope</string>
 </resources>
